--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,49 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+h2 {
+  font-size: 23px;
+  padding: 0 0 0 10px;
+}
+
+.passworddiv {
+  font-size: 20px;
+  padding: 8px 8px;
+  font-weight: bold;
+  display: block;
+  text-align: center;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+}
+
+form label {
+  font-size: 20px;
+  padding: 8px 8px;
+}
+
+form input {
+  border: 1px solid rgb(96, 87, 216);
+  border-radius: 6px;
+  padding: 10px 10px;
+  margin: 0 4px;
+  font-size: 18px;
+}
+
+form input[type="range"] {
+  background: #205928;
+  padding: 10px 0;
 }
